    - Fixed that trade quality filter was effective before unlocking the upgrade "Trade Overview Quality".
  Changes:
    - Fixed big power poles not actually creating perfect X's from the "Free Roboports" upgrade.
    - Upgrades that are disabled by default now indicate so in the upgrades tab.
  Features:
    - (TODO) Added "Free Railways" upgrade.
    - Added scenario settings for toggling whether certain upgrades should be enabled by default.
    - (TODO) Added ability to import and export scenario settings.
  Major Features:
    - (TODO) Added scenario setting for preventing trades from containing items that aren't yet researched in the tech tree.
    - (TODO) Added super trade chunks that involve many items per trade.
    - (TODO) Added scenario setting for adjusting the impact of supply and demand on market trades.
    - (TODO) Swapped out ruins chunks with multi-chunk fortresses, containing unique upgrades.
    - (TODO) Added addon "Lazy Bastard Mode".
    - (TODO) Added addon "Dangerous Artillery".
    - (TODO) Added addon "Brave New World".
    - (TODO) Added addon "Rocket Silo Base".
    - (TODO) Added addon "Automatic Restarts".
    - (TODO) Added addon "Trade Collection".
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2024.08.14
  Bugfixes:
    - Fixed that newly joining players to a server do not see the current chunk unlock cost.
    - Fixed a crash caused by overflowing a dimensional chunk's red chests from the corresponding void dimension's blue chests.
  Changes:
    - Made it so that red chests around dimensional chunks can have limited capacity and the item transferral works as expected.
  Balancing:
    - Made it so that infinity chests don't spawn until the void dimension gets conquered.
  Features:
    - Added "available coins" display above the chunk unlocking buttons.
    - Chunk unlocking buttons indicate whether you can or cannot afford another chunk unlock.